--- a/Legal/index.html
+++ b/Legal/index.html
@@ -109,7 +109,7 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Nexint.ca
         </p>
       </div>
       <hr class="footer">
@@ -155,22 +155,22 @@
       <div class="textfoot">
         <a href="https://www.youtube.com/@nexint">
           <p class="first">
-            YouTube:
+            YouTube
           </p>
         </a>
         <a href="https://x.com/nexints">
           <p class="next">
-            Twitter:
+            Twitter
           </p>
         </a>
-        <a href="https://discord.gg/k5mfWReazF">
+        <a href="https://nexint.ca/discord">
           <p class="next">
-            Discord:
+            Discord
           </p>
         </a>
-        <a href="mailto:business@nexint.org">
+        <a href="mailto:business@nexint.ca">
           <p class="next">
-            E-mail:
+            E-mail
           </p>
         </a>
       </div>
@@ -178,7 +178,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+  <a href="https://the-gospel.xyz/">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
