--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,14 +58,14 @@
       <a href="https://www.youtube.com/@Nexint">
         YT: Nexint
       </a>
-      <a href="https://files.nexint.org/">
-        Download music here: - Contact me for username and password!
+      <a href="https://files.nexint.org/share/8d8umdeO">
+        Download music here!
       </a>
-      <a href="https://discord.gg/k5mfWReazF">
-        Discord Server:
+      <a href="https://nexint.ca/discord">
+        Discord Server
       </a>
-      <a href="mailto:business@nexint.org">
-        E-mail: business@nexint.org
+      <a href="mailto:business@nexint.ca">
+        E-mail: business@nexint.ca
       </a>
       <a href="https://x.com/@Nexints">
         Twitter: @Nexints
@@ -206,7 +206,7 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Nexint.ca
         </p>
       </div>
       <hr class="footer">
@@ -252,22 +252,22 @@
       <div class="textfoot">
         <a href="https://www.youtube.com/@nexint">
           <p class="first">
-            YouTube:
+            YouTube
           </p>
         </a>
         <a href="https://x.com/nexints">
           <p class="next">
-            Twitter:
+            Twitter
           </p>
         </a>
-        <a href="https://discord.gg/k5mfWReazF">
+        <a href="https://nexint.ca/discord">
           <p class="next">
-            Discord:
+            Discord
           </p>
         </a>
-        <a href="mailto:business@nexint.org">
+        <a href="mailto:business@nexint.ca">
           <p class="next">
-            E-mail:
+            E-mail
           </p>
         </a>
       </div>
@@ -275,7 +275,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+  <a href="https://the-gospel.xyz/">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
