--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <a href="https://github.com/Nexints">
         Github:
       </a>
-      <a href="mailto:business@nexint.org">
-        E-mail: business@nexint.org
+      <a href="mailto:business@nexint.ca">
+        E-mail: business@nexint.ca
       </a>
       <a href="./Portfolio/">
         Full Portfolio:
@@ -118,21 +118,18 @@
       <h2>Official Mirrors</h2>
     </button>
     <div class="content" style="height:200px;">
+      <p class="desctext">
+        If you are using nexint.xyz to access this website, we will no longer be supporting that domain on 07/05/2025.
+      </p>
       <a href="https://www.nexint.org">
-        Nexint.org
+        nexint.org
       </a>
-      <a href="https://www.nexint.xyz">
-        Nexint.xyz
+      <a href="https://www.nexint.ca">
+        nexint.ca
       </a>
       <p class="desctext">
         Hosted by Vercel. I am not affiliated with any other Nexint websites. Those websites may or may not be
         legitimete, but I do not own them and do not claim any ties with them.
-      </p>
-      <a href="https://nexint.forumotion.asia/">
-        Random forum I built ⚰⚰⚰
-      </a>
-      <p class="desctext">
-        (Please don't use this. While I may have created it, I may make a much better forum later on.)
       </p>
     </div>
   </div>
@@ -144,6 +141,11 @@
       <h2>Website Update Log</h2>
     </button>
     <div class="content" style="height:200px;">
+      <p class="desctext">
+        4/9/2025:
+        <br>+ Nexint.ca added as an official mirror!
+        <br>- Nexint.xyz will no longer be an official mirror.
+      </p>
       <p class="desctext">
         3/26/2025:
         <br>/ Added redirect to Discord server! 
@@ -283,7 +285,7 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Nexint.ca
         </p>
       </div>
       <hr class="footer">
@@ -329,22 +331,22 @@
       <div class="textfoot">
         <a href="https://www.youtube.com/@nexint">
           <p class="first">
-            YouTube:
+            YouTube
           </p>
         </a>
         <a href="https://x.com/nexints">
           <p class="next">
-            Twitter:
+            Twitter
           </p>
         </a>
-        <a href="https://discord.gg/k5mfWReazF">
+        <a href="https://nexint.ca/discord">
           <p class="next">
-            Discord:
+            Discord
           </p>
         </a>
-        <a href="mailto:business@nexint.org">
+        <a href="mailto:business@nexint.ca">
           <p class="next">
-            E-mail:
+            E-mail
           </p>
         </a>
       </div>
