--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -419,7 +419,7 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Nexint.ca
         </p>
       </div>
       <hr class="footer">
@@ -441,12 +441,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="./../Usage_Terms/">
+        <a href="/Usage_Terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="./../Legal/">
+        <a href="/Legal/">
           <p class="next">
             Legal:
           </p>
@@ -465,22 +465,22 @@
       <div class="textfoot">
         <a href="https://www.youtube.com/@nexint">
           <p class="first">
-            YouTube:
+            YouTube
           </p>
         </a>
         <a href="https://x.com/nexints">
           <p class="next">
-            Twitter:
+            Twitter
           </p>
         </a>
-        <a href="https://discord.gg/k5mfWReazF">
+        <a href="https://nexint.ca/discord">
           <p class="next">
-            Discord:
+            Discord
           </p>
         </a>
-        <a href="mailto:business@nexint.org">
+        <a href="mailto:business@nexint.ca">
           <p class="next">
-            E-mail:
+            E-mail
           </p>
         </a>
       </div>
@@ -488,7 +488,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+  <a href="https://the-gospel.xyz/">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
