--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        If you are using nexint.xyz to access this website, we will no longer be supporting that domain on 07/05/2025.
+        If you are using nexint.xyz to access this website, we will no longer be supporting that domain on 07/17/2025.
       </p>
       <a href="https://www.nexint.org">
         nexint.org
@@ -144,7 +144,7 @@
       <p class="desctext">
         4/9/2025:
         <br>+ Nexint.ca added as an official mirror!
-        <br>- Nexint.xyz will no longer be an official mirror.
+        <br>- Nexint.xyz will no longer be an official mirror on 07/17/2025.
       </p>
       <p class="desctext">
         3/26/2025:
