--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
     </button>
     <div class="content" style="height:200px;">
       <a href="https://www.youtube.com/@Nexint">
-        Nexint YT:
+        Nexint YT: @Nexint
       </a>
       <a href="https://www.spacelink.cc">
-        SpaceLink (play.spacelink.cc)
+        SpaceLink: https://www.spacelink.cc (SHUT DOWN)
       </a>
-      <a href="https://drive.google.com/drive/u/1/folders/1npsQEDj68GOBnddcYsYXqsJmRNNxaWYc">
-        Music Download:
+      <a href="https://files.nexint.org/share/8d8umdeO">
+        Music Download: https://files.nexint.org/share/8d8umdeO
       </a>
       <a href="https://github.com/Nexints">
-        Github:
+        Github: https://github.com/Nexints
       </a>
       <a href="mailto:business@nexint.ca">
         E-mail: business@nexint.ca
@@ -150,7 +150,7 @@
         3/26/2025:
         <br>/ Added redirect to Discord server! 
       </p>
-      <a href="https://www.nexint.org/discord">
+      <a href="https://www.nexint.ca/discord">
         Discord server redirect!
       </a>
       <p class="desctext">
