--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <a href="https://www.youtube.com/@Nexint">
         Nexint YT: @Nexint
       </a>
-      <a href="https://www.spacelink.cc">
-        SpaceLink: https://www.spacelink.cc (SHUT DOWN)
+      <a href="https://www.tiktok.com/@nexint">
+        TikTok: @Nexint
       </a>
       <a href="https://files.nexint.org/share/8d8umdeO">
         Music Download: https://files.nexint.org/share/8d8umdeO
