--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -121,7 +121,7 @@
 <div class="row">
   <div class="side">
     <button type="button" class="titlebars">
-      <h2>Accounts</h2>
+      <h2>Gamer Accounts</h2>
     </button>
     <div class="content" style="height:200px;">
       <a href="https://ch.tetr.io/u/Nexint">
@@ -184,12 +184,6 @@
       </a>
       <a href="http://www.youtube.com/@SmolInternet">
         YT: SmolInternet (Collab)
-      </a>
-      <a href="https://www.youtube.com/@ripplemc">
-        YT: RippleMC ⚰ (Not associated with the Ripple scam going on!)
-      </a>
-      <a href="https://www.youtube.com/@celestialbubble">
-        YT: CelestialBubble ⚰
       </a>
       <a href="https://www.youtube.com/@youtube-tutorials">
         YT: YT Tutorials ⚰
