--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         TikTok: @Nexint
       </a>
       <a href="https://files.nexint.org/share/8d8umdeO">
-        Music Download: https://files.nexint.org/share/8d8umdeO
+        Music Download:
       </a>
       <a href="https://github.com/Nexints">
-        Github: https://github.com/Nexints
+        Github: Nexints
       </a>
       <a href="mailto:business@nexint.ca">
         E-mail: business@nexint.ca
