--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -183,7 +183,7 @@
             Usage Terms:
           </p>
         </a>
-        <a href="/Legal/">
+        <a href="/legal/">
           <p class="next">
             Legal:
           </p>
@@ -249,11 +249,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
-  <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="activated left">About Me</a>
-  <a href="/Blog/" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="right">Legal</a>
+  <a href="/portfolio/" class="left">Portfolio</a>
+  <a href="/about_me/" class="activated left">About Me</a>
+  <a href="/blog/" class="left">Blog</a>
+  <a href="/usage_terms/" class="right">Usage Terms</a>
+  <a href="/legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
