--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -222,12 +222,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="/Usage_Terms/">
+        <a href="/usage_terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="/Legal/">
+        <a href="/legal/">
           <p class="next">
             Legal:
           </p>
@@ -293,11 +293,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
-  <a href="/Portfolio/" class="activated left">Portfolio</a>
-  <a href="/About_Me/" class="left">About Me</a>
-  <a href="/Blog/" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="right">Legal</a>
+  <a href="/portfolio/" class="left">Portfolio</a>
+  <a href="/about_me/" class="left">About Me</a>
+  <a href="/blog/" class="left">Blog</a>
+  <a href="/usage_terms/" class="right activated">Usage Terms</a>
+  <a href="/legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
