--- a/byte-ai/index.html
+++ b/byte-ai/index.html
@@ -58,6 +58,9 @@
         <li>Per-channel enabling</li>
         <li>DM support</li>
       </ul>
+      <p class="desctext">
+        Note that Byte. AI is discontinued. Use at your own risk.
+      </p>
     </div>
   </div>
 </div>
@@ -71,7 +74,7 @@
     <div class="footer1">
       <div class="texthead">
         <p>
-          Nexint.org
+          Nexint.ca
         </p>
       </div>
       <hr class="footer">
@@ -93,12 +96,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="/Usage_Terms/">
+        <a href="/usage_terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="/Legal/">
+        <a href="/legal/">
           <p class="next">
             Legal:
           </p>
@@ -117,22 +120,22 @@
       <div class="textfoot">
         <a href="https://www.youtube.com/@nexint">
           <p class="first">
-            YouTube:
+            YouTube
           </p>
         </a>
         <a href="https://x.com/nexints">
           <p class="next">
-            Twitter:
+            Twitter
           </p>
         </a>
-        <a href="https://discord.gg/k5mfWReazF">
+        <a href="https://nexint.ca/discord">
           <p class="next">
-            Discord:
+            Discord
           </p>
         </a>
-        <a href="mailto:business@nexint.org">
+        <a href="mailto:business@nexint.ca">
           <p class="next">
-            E-mail:
+            E-mail
           </p>
         </a>
       </div>
@@ -140,7 +143,7 @@
   </div>
 </div>
 <div class="bottom">
-  <a href="https://www.bible.com/bible/114/JHN.15.9-13">
+  <a href="https://the-gospel.xyz/">
     <p>Remember: Jesus Loves You.</p>
   </a>
 </div>
@@ -164,11 +167,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
-  <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="left">About Me</a>
-  <a href="/Blog" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/byte-ai/privacy-policy/" class="right">Legal</a>
+  <a href="/portfolio/" class="left">Portfolio</a>
+  <a href="/about_me/" class="left">About Me</a>
+  <a href="/blog/" class="left">Blog</a>
+  <a href="/usage_terms/" class="right activated">Usage Terms</a>
+  <a href="/legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
