--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <a href="mailto:business@nexint.ca">
         E-mail: business@nexint.ca
       </a>
-      <a href="./Portfolio/">
+      <a href="./portfolio/">
         Full Portfolio:
       </a>
     </div>
@@ -378,11 +378,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="#" class="activated navcenter">Home</a>
-  <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="left">About Me</a>
-  <a href="/Blog/" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="right">Legal</a>
+  <a href="/portfolio/" class="left">Portfolio</a>
+  <a href="/about_me/" class="left">About Me</a>
+  <a href="/blog/" class="left">Blog</a>
+  <a href="/usage_terms/" class="right">Usage Terms</a>
+  <a href="/legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
