--- a/Legal/index.html
+++ b/Legal/index.html
@@ -52,9 +52,9 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        This website is stil very much under construction! Please don't rely on this as an actual legal document yet.
+        This legal document is under construction!
         <br> For the time being, please rely on our usage guidelines or contact me on my portfolio.
-        <br> Coming soon!
+        <br> Coming soon! (or never lol)
       </p>
     </div>
   </div>
@@ -131,12 +131,12 @@
       </div>
       <hr class="footer">
       <div class="textfoot">
-        <a href="/Usage_Terms/">
+        <a href="/usage_terms/">
           <p class="first">
             Usage Terms:
           </p>
         </a>
-        <a href="/Legal/">
+        <a href="/legal/">
           <p class="next">
             Legal:
           </p>
@@ -202,11 +202,11 @@
 
 <div class="navbar" id="myTopnav">
   <a href="/" class="navcenter">Home</a>
-  <a href="/Portfolio/" class="left">Portfolio</a>
-  <a href="/About_Me/" class="left">About Me</a>
-  <a href="/Blog/" class="left">Blog</a>
-  <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="activated right">Legal</a>
+  <a href="/portfolio/" class="left">Portfolio</a>
+  <a href="/about_me/" class="left">About Me</a>
+  <a href="/blog/" class="left">Blog</a>
+  <a href="/usage_terms/" class="right activated">Usage Terms</a>
+  <a href="/legal/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
