usage terms update

--- a/usage_terms/index.html
+++ b/usage_terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (v1.7)</h1>
+    <h1>Usage Terms (v1.8)</h1>
   </div>
 </div>
 
@@ -64,7 +64,7 @@
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 1:37 PM EST / Mar 13, 2025.
+        <br> Updated 2:06 PM EST / Jul 30, 2025.
       </p>
     </div>
   </div>
@@ -245,11 +245,13 @@
       <ul class="desctext">
         <li>Determined per song</li>
         <li>Assuming no terms are listed, you may not:</li>
-        <li>Pirate our music</li>
         <li>Use our music in any personal / non-commercial projects without credit</li>
         <li>Use our music in ways against the Bible.</li>
         <li><i>The bible takes priority over the law in this case.</i></li>
       </ul>
+      <p class="desctext">
+        Piracy remains a gray area for morality. While I can't endorse piracy, I also can't stop you from pirating either.
+      </p>
     </div>
   </div>
 </div>
@@ -286,6 +288,9 @@
         <li>Reuploads of the audio (with credit)</li>
         <li>Transformative reuploads of our content</li>
       </ul>
+      <p class="desctext">
+        Transformative re-uploads are pieces of content that builds upon what my content is about, even if it doesn't necessairly fall under Fair Use in the USA. This is not a legally binding document, and contact me if your specific use case ia allowed or not.
+      </p>
     </div>
   </div>
   <div class="main">
@@ -346,7 +351,7 @@
       <h2>What isn't allowed</h2>
     </button>
     <div class="content" style="height:200px;">
-        <ul class="desctext">
+      <ul class="desctext">
         <li>Determined per video</li>
         <li>Assuming no terms are listed, these usages aren't allowed:</li>
         <li>Usage of our content that does not fall under "Fair use" guidelines in Canada or your local country.</li>
@@ -375,6 +380,7 @@
         These terms of service focus on our software and what we've made!
         <br>Note that this only applies to software on our public github, and not software distributed only on our website.
         <br>Those pieces of software have different terms of usage.
+        <br>This only applies to software that does not already have a license on Github. That license takes priority over this document.
       </p>
     </div>
   </div>
