Re-adding canary

--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
+        8/1//2025:
+        <br>+ Fixed Website Links
+        <br>/ Modified Canary. It should now be put at the top of this page at all times, watch for the removal of the canary.
+      </p>
+      <a href="./canary.txt">
+        Canary Website (If this leads to a 404, be warned.)
+      </a>
+      <p class="desctext">
         4/9/2025:
         <br>+ Nexint.ca added as an official mirror!
         <br>- Nexint.xyz will no longer be an official mirror on 07/17/2025.
@@ -175,6 +183,7 @@
       </p>
       <p class="desctext">
         07/30/2024:
+        <br>+ Canary Added! Linked at the bottom of this description.
         <br>+ Custom 404 page added.
         <br>/ Bugfixes, Bugfixes, Bugfixes.
         <br>/ Apologies for the lack of "updates" here. Spammed all at once.
