Blocked TikTok Access.

--- a/usage_terms/index.html
+++ b/usage_terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (v1.8)</h1>
+    <h1>Usage Terms (v1.9)</h1>
   </div>
 </div>
 
@@ -77,6 +77,9 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
+        <li>
+          Any use of my content on TikTok specifically is forbidden. This includes, but is not limited to, videos, art, playthroughs, music, software, and more. I will file a copyright claim if I find any content that I own on TikTok.
+        </li>
         <li>Unless otherwise stated, using anything I make for AI purposes is illegal.
           <br>This includes (but is not limited to) putting my content through an AI filter, creating deeepfaces, training LLMs from my work, and more.
         </li>
