--- a/byte-ai/index.html
+++ b/byte-ai/index.html
@@ -59,7 +59,7 @@
         <li>DM support</li>
       </ul>
       <p class="desctext">
-        Note that Byte. AI is discontinued. Use at your own risk.
+        Note that Byte. AI, while operational, is discontinued and has no lasting support. Use at your own risk.
       </p>
     </div>
   </div>
