--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,10 +58,7 @@
       <a href="https://www.youtube.com/@Nexint">
         YT: Nexint
       </a>
-      <a href="https://files.nexint.org/share/8d8umdeO">
-        Download music here!
-      </a>
-      <a href="https://nexint.ca/discord">
+      <a href="https://discord.nexint.ca">
         Discord Server
       </a>
       <a href="mailto:business@nexint.ca">
@@ -77,9 +74,16 @@
   </div>
   <div class="main">
     <button type="button" class="titlebars">
-      <h2>Github Stuff</h2>
+      <h2>Public Things!</h2>
     </button>
     <div class="content" style="height:200px;">
+      <a href="https://files.nexint.org/share/8d8umdeO">
+        Music Download:
+      </a>
+      <p class="desctext">
+        Description:
+        <br>Public Music Directory! Clicking this brings you to my file host, allowing you to download any files you want!
+      </p>
       <a href="https://github.com/Nexints">
         Official Github
       </a>
@@ -99,8 +103,8 @@
       </a>
       <p class="desctext">
         Description:<br>I originally coded this project at around March of 2024, however I officially "discontinued the project" on July 13th, 2024.
-        <br>This mod has since been revived, and is currently being worked on.
-        <br>Coded in Renpy and Python.
+        <br>This mod has since been inactive, but still possible for a revival someday by someone other than me.
+        <br>Coded in Renpy and Python. Feel free to fork it!
       </p>
       <a href="https://docs.google.com/document/d/1gb7TubsdVm40zwtyxnHLiUuaWk1eMWxetINRi3gpyaA/edit?usp=sharing">
         Original Synopsis for DDLT (Modified in the actual mod)
@@ -137,27 +141,24 @@
   </div>
   <div class="main">
     <button type="button" class="titlebars">
-      <h2>Best Videos</h2>
+      <h2>Domains Owned</h2>
     </button>
     <div class="content" style="height:200px;">
-      <a href="https://www.youtube.com/watch?v=1O0kTlKnsoQ">
-        DASH is STILL BROKEN?
+      <a href="https://nexint.ca">
+        Nexint.ca
       </a>
-      <a href="https://www.youtube.com/watch?v=hFFHGpXDAHM">
-        Reviewing EVERY Sonic Wave Remake
+      <a href="https://nexint.org/">
+        Nexint.org
       </a>
-      <a href="https://www.youtube.com/watch?v=9cpfJq-nwd0">
-        Sonic Wave Edit
+      <a href="https://spacelink.cc">
+        Spacelink.cc
       </a>
-      <a href="https://www.youtube.com/watch?v=WX_qp2RQxFU">
-        Update 2.2 is Broken.
+      <a href="https://the-gospel.xyz">
+        the-gospel.xyz
       </a>
-      <a href="https://www.youtube.com/watch?v=rq9B_2m2un4">
-        The DASH Full Analysis.
-      </a>
-      <a href="https://www.youtube.com/watch?v=V2UixW-3bkg">
-        SWAGGEST Dash Completion!
-      </a>
+      <p class="desctext">
+        There are other URL's that I may own, but most of these are private or will no longer be owned by me.
+      </p>
     </div>
   </div>
 </div>
@@ -179,14 +180,20 @@
       <a href="https://www.youtube.com/@Nex_Beats">
         YT: Nex Beats
       </a>
-      <a href="https://www.youtube.com/@Cloudray">
-        YT: Cloudray (Collab)
+      <a href="https://www.youtube.com/@Nex_Plus">
+        YT: Nex Plus
       </a>
-      <a href="http://www.youtube.com/@SmolInternet">
-        YT: SmolInternet (Collab)
+      <a href="https://www.youtube.com/@Nex_PJSK">
+        YT: Nex [PJSK]
+      </a>
+      <a href="https://www.youtube.com/@Cloudray">
+        YT: Cloudray
       </a>
       <a href="https://www.youtube.com/@youtube-tutorials">
         YT: YT Tutorials ⚰
+      </a>
+      <a href="https://www.tiktok.com/@nexint">
+        TikTok: @Nexint (Dead)
       </a>
     </div>
   </div>
