re-allowed tiktok usage again

--- a/usage_terms/index.html
+++ b/usage_terms/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Usage Terms for Nexint</title>
+<title>Nexint's Usage Terms</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/styles.css">
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (v1.9)</h1>
+    <h1>Usage Terms (v2.0)</h1>
   </div>
 </div>
 
@@ -55,16 +55,16 @@
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>Using anything I post implies an agreement to these terms and conditions. If you do not agree to these terms and conditions, you do not have the right to use anything I make.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
-        <br><b>Whatever usages I have permitted to you in private take priority over this document.</b>
-        <br>I remain the sole copyright owner of my content. I hold the right to revoke your use case of my content, and tou may not use my usage terms as legal justification in court in this case.
-        <br><b>If for any reason I have given you an exemption to use my content, this exemption only applies to your specific use case, all future use cases fall under these terms.</b>
+        <br><b>Whatever usages I have permitted or forbidden to you in private take priority over this document.</b>
+        <br>I remain the sole copyright owner of my content. I hold the right to revoke your use case of my content, and you may not use these usage terms as legal justification in court.
+        <br><b>If for any reason I have given you an exemption to use my content, this exemption only applies to your specific use case, and unless otherwise specified, do not apply to anything else I make.</b>
         <br>Pleae check these usage guidelines every so often! Any TOS changes apply after 30 days from updating.
         <br>Our content and usage guidelines are on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
-          These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 2:06 PM EST / Jul 30, 2025.
+          These assets are still protected by copyright law, and you may not use these resources without contacting me or the respective artist.</i>
+        <br> Updated 2:02 PM EST / Aug 19, 2025.
       </p>
     </div>
   </div>
@@ -78,7 +78,7 @@
     <div class="content" style="height:200px;">
       <ul class="desctext">
         <li>
-          Any use of my content on TikTok specifically is forbidden. This includes, but is not limited to, videos, art, playthroughs, music, software, and more. I will file a copyright claim if I find any content that I own on TikTok.
+          TikTok usage has been allowed again, but I do not endorse the platform in any way, shape or form.
         </li>
         <li>Unless otherwise stated, using anything I make for AI purposes is illegal.
           <br>This includes (but is not limited to) putting my content through an AI filter, creating deeepfaces, training LLMs from my work, and more.
@@ -102,7 +102,7 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our art!
+        These terms of service focus on my art!
       </p>
     </div>
   </div>
@@ -168,9 +168,9 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our solo music!
+        These terms of service focus on my solo music!
         <br>These only apply to non-collaboration songs, where I make everything myself.
-        <br>Note: These songs are generally dedicated to the community, as I'm trying to make my terms as open as possible. This section is the only section where credit is never necessary, even if I say otherwise.
+        <br>Note: These songs are generally dedicated to the community, as I'm trying to make my terms as open as possible. This section is the only section where credit is never necessary, but always appreciated.
         <br>Subject to change.
       </p>
     </div>
@@ -219,7 +219,7 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our collab music!
+        These terms of service focus on collaboritive music that I'm a part of!
         <br> These only apply to collab songs, where I don't make all of the music.
       </p>
     </div>
@@ -270,7 +270,7 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our solo videos!
+        These terms of service focus on videos I make by myself!
         <br>Note that we will not copyright strike you if you use our content, unless you directly reupload our content without our consent.
         <br>If you do get a copyright strike, contact me immediately and I will try to resolve the situation.
         <br>Copyright strikes are only reserved for extreme cases listed below, primairly reuploading our content without credit.
@@ -292,7 +292,7 @@
         <li>Transformative reuploads of our content</li>
       </ul>
       <p class="desctext">
-        Transformative re-uploads are pieces of content that builds upon what my content is about, even if it doesn't necessairly fall under Fair Use in the USA. This is not a legally binding document, and contact me if your specific use case ia allowed or not.
+        Transformative re-uploads are pieces of content that builds upon what my content is about, even if it doesn't necessairly fall under Fair Use in the USA or Fair Dealing in Canada. This is not a legally binding document, and contact me if your specific use case ia allowed or not.
       </p>
     </div>
   </div>
@@ -303,7 +303,7 @@
     <div class="content" style="height:200px;">
       <ul class="desctext">
         <li>Using our content without credit</li>
-        <li>Direct re-uploads of our content (If you do this without credit, we will send a copyright strike.)</li>
+        <li>Direct (non-transformative) re-uploads of our content (If you do this without credit, we will send a copyright strike.)</li>
         <li>Any usage that breaks the Christian Bible.</li>
         <li>Any usage against the Canadian law.</li>
         <li>Any usage against your local law.</li>
@@ -326,7 +326,7 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our collaboration videos!
+        These terms of service focus on videos made with other people!
         <br>Note that we will not copyright strike you if you use our content, unless you directly reupload our content without our consent.
         <br>If you do get a copyright strike, contact me immediately and I will try to resolve the situation.
         <br>Copyright strikes are only reserved for very extreme cases listed under our Solo Music Guidelines.
@@ -380,10 +380,9 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our software and what we've made!
-        <br>Note that this only applies to software on our public github, and not software distributed only on our website.
-        <br>Those pieces of software have different terms of usage.
-        <br>This only applies to software that does not already have a license on Github. That license takes priority over this document.
+        These terms of service focus on my software and what I've made!
+        <br>Note that this only applies to software on my public github, and not software distributed through other means.
+        <br>This only applies to software that does not already have a license on Github. Any license on Github takes priority over this document.
       </p>
     </div>
   </div>
