--- a/usage_terms/index.html
+++ b/usage_terms/index.html
@@ -54,17 +54,17 @@
       <p class="desctext">
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>Using anything I post implies an agreement to these terms and conditions. If you do not agree to these terms and conditions, you do not have the right to use anything I make.
-        <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
+        <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content. You must not imply you are affiliated with me whenever you are using my stuff.
         <br><b>Whatever usages I have permitted or forbidden to you in private take priority over this document.</b>
         <br>I remain the sole copyright owner of my content. I hold the right to revoke your use case of my content, and you may not use these usage terms as legal justification in court.
-        <br><b>If for any reason I have given you an exemption to use my content, this exemption only applies to your specific use case, and unless otherwise specified, do not apply to anything else I make.</b>
+        <br><b>If for any reason I have given you an exemption to use my content, this exemption only applies to your specific use case, and unless otherwise specified, do not apply to anything else I make and can be revoked at any time (including during).</b>
         <br>Pleae check these usage guidelines every so often! Any TOS changes apply after 30 days from updating.
         <br>Our content and usage guidelines are on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not use these resources without contacting me or the respective artist.</i>
-        <br> Updated 2:02 PM EST / Aug 19, 2025.
+        <br> Updated 8:33 PM EST / Aug 29, 2025.
       </p>
     </div>
   </div>
@@ -85,6 +85,7 @@
         </li>
         <li>Any commercial usage by any corporation (excluding monetization on YouTube) may require a revenue split. Message me for more details.
           <br>Do not release anything for commercial usage without my explicit approval! Personal use remains unaffected.
+          <br>AI companies / products (companies or products that make or utilize AI) are not allowed to use any products / services I make. More specifics can be reached by contacting me directly.
         </li>
       </ul>
     </div>
@@ -103,6 +104,7 @@
     <div class="content" style="height:200px;">
       <p class="desctext">
         These terms of service focus on my art!
+        <br>General guidelines / notes take priority. Subject to change.
       </p>
     </div>
   </div>
@@ -171,7 +173,7 @@
         These terms of service focus on my solo music!
         <br>These only apply to non-collaboration songs, where I make everything myself.
         <br>Note: These songs are generally dedicated to the community, as I'm trying to make my terms as open as possible. This section is the only section where credit is never necessary, but always appreciated.
-        <br>Subject to change.
+        <br>Subject to change. General guidelines / notes take priority.
       </p>
     </div>
   </div>
@@ -221,6 +223,7 @@
       <p class="desctext">
         These terms of service focus on collaboritive music that I'm a part of!
         <br> These only apply to collab songs, where I don't make all of the music.
+        <br>General guidelines / notes take priority. Subject to change.
       </p>
     </div>
   </div>
@@ -274,6 +277,7 @@
         <br>Note that we will not copyright strike you if you use our content, unless you directly reupload our content without our consent.
         <br>If you do get a copyright strike, contact me immediately and I will try to resolve the situation.
         <br>Copyright strikes are only reserved for extreme cases listed below, primairly reuploading our content without credit.
+        <br>General guidelines / notes take priority. Subject to change.
       </p>
     </div>
   </div>
@@ -330,6 +334,7 @@
         <br>Note that we will not copyright strike you if you use our content, unless you directly reupload our content without our consent.
         <br>If you do get a copyright strike, contact me immediately and I will try to resolve the situation.
         <br>Copyright strikes are only reserved for very extreme cases listed under our Solo Music Guidelines.
+        <br>General guidelines / notes take priority. Subject to change.
       </p>
     </div>
   </div>
@@ -383,6 +388,7 @@
         These terms of service focus on my software and what I've made!
         <br>Note that this only applies to software on my public github, and not software distributed through other means.
         <br>This only applies to software that does not already have a license on Github. Any license on Github takes priority over this document.
+        <br>General guidelines / notes also take priority underneath the license. Subject to change.
       </p>
     </div>
   </div>
